# stac-fastapi-geoparquet-examples

./: .env.local  .gitignore  README.md  app.py  collections.json  config.py  package-lock.json  package.json  pyproject.toml
.github/actions/: setup.yml
.github/actions/setup/: action.yml
.github/workflows/: cdk.yml  deploy.yml
lambda/: Dockerfile  handler.py
